--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
 	<title>乐惠服务</title>
 	<script>
-		(function(doc, win) {
+		(function (doc, win) {
 			var docEl = doc.documentElement,
 				resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
-				recalc = function() {
+				recalc = function () {
 					var clientWidth = docEl.clientWidth;
-					if(!clientWidth) return;
+					if (!clientWidth) return;
 					docEl.style.fontSize = 20 * (clientWidth / 375) + 'px';
 				};
-			if(!doc.addEventListener) return;
+			if (!doc.addEventListener) return;
 			win.addEventListener(resizeEvt, recalc, false);
 			doc.addEventListener('DOMContentLoaded', recalc, false);
 		})(document, window);
 	</script>
-	<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+	<!-- <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script> -->
+</head>
+
+<body>
+	<div id="app"></div>
+	<!-- built files will be auto injected -->
+</body>
+
 </html>
